# speech-enhancement

./: pyproject.toml
eval/: blindset-ears-evaluation.ipynb  testset-ears-wham.ipynb
notebooks/: dataset_exploration.ipynb  metrics-47.csv  plots.ipynb
src/: configs.py  datasets.py  metadata.py  utils.py
src/linear_bin2bin/: layers.py  losses.py  models.py  strategies.py  train.py
src/mel_bin2bin/: evaluate.py  models.py  strategies.py  train.py  utils.py
src/mel_regan/: evaluate.py  files_utils.py  layers.py  losses.py  models.py  strategies.py  train.py  utils.py
src/pix2pix/: layers.py  models.py  strategies.py  train.py
train/: melregan-train-v1.ipynb  melregan_train_v2.py  train-notebook-v1.ipynb  train-notebook-v1.py
utility_scripts/: callbacks.py  configs.py  datasets.py
utility_scripts/linear_bin2bin/: losses.py  models.py  strategies.py  train.py
utility_scripts/mel_bin2bin/: evaluate.py  layers.py  losses.py  models.py  strategies.py  train.py  utils.py
utility_scripts/pix2pix/: models.py  strategies.py  train.py
