[project]
name = "speech-enhancement-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy==2.3",
    "pandas>=2.3.3",
    "pesq>=0.0.4",
    "pystoi>=0.4.1",
    "pytorch-lightning>=2.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.3",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.1",
    "torchmetrics>=1.8.2",
    "tqdm>=4.67.1",
]
